Airflow/mnt/logs/dag_id=get_Data_Submission_Reddit_pipeline/run_id=manual__2024-04-23T09:07:34.627533+00:00/task_id=load_data_to_postgres/attempt=8.log
[2024-04-23T09:25:24.389+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [queued]>
[2024-04-23T09:25:24.396+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [queued]>
[2024-04-23T09:25:24.396+0000] {taskinstance.py:2171} INFO - Starting attempt 8 of 8
[2024-04-23T09:25:24.410+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): load_data_to_postgres> on 2024-04-23 09:07:34.627533+00:00
[2024-04-23T09:25:24.416+0000] {standard_task_runner.py:60} INFO - Started process 23266 to run task
[2024-04-23T09:25:24.420+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'get_Data_Submission_Reddit_pipeline', 'load_data_to_postgres', 'manual__2024-04-23T09:07:34.627533+00:00', '--job-id', '197', '--raw', '--subdir', 'DAGS_FOLDER/GetPost.py', '--cfg-path', '/tmp/tmp7hxlgaaa']
[2024-04-23T09:25:24.423+0000] {standard_task_runner.py:88} INFO - Job 197: Subtask load_data_to_postgres
[2024-04-23T09:25:24.505+0000] {task_command.py:423} INFO - Running <TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [running]> on host 694ea5737885
[2024-04-23T09:25:24.710+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='get_Data_Submission_Reddit_pipeline' AIRFLOW_CTX_TASK_ID='load_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-04-23T09:07:34.627533+00:00' AIRFLOW_CTX_TRY_NUMBER='8' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-23T09:07:34.627533+00:00'
[2024-04-23T09:25:24.733+0000] {logging_mixin.py:188} INFO - /opt/***/dags/staging/Submission_Reddit_Data_2024-04-23T09:07:34.627533+00:00.json
[2024-04-23T09:25:24.741+0000] {base.py:83} INFO - Using connection ID 'my_***_conn' for task execution.
[2024-04-23T09:25:24.750+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/GetPost.py", line 105, in _load_data_to_postgres
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "am"
LINE 8: ...re Store - Good enough option','2','nicolay-ai',I am looking...
                                                             ^

[2024-04-23T09:25:24.764+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=get_Data_Submission_Reddit_pipeline, task_id=load_data_to_***, execution_date=20240423T090734, start_date=20240423T092524, end_date=20240423T092524
[2024-04-23T09:25:24.784+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 197 for task load_data_to_*** (syntax error at or near "am"
LINE 8: ...re Store - Good enough option','2','nicolay-ai',I am looking...
                                                             ^
; 23266)
[2024-04-23T09:25:24.811+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-23T09:25:24.830+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
